Fix for dead locations and URLs, ready to push 1.0.9.2

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <title>Transposh plugin starter page</title>
 </head>
 <body>
-	<div style="text-align: center;"><span style="font-weight: bold;">Welcome to <a href="http://transposh.org">transposh</a> wordpress plugin</span><br />
+	<div style="text-align: center;"><span style="font-weight: bold;">Welcome to <a href="https://transposh.org">transposh</a> wordpress plugin</span><br />
 		</div><br />
         Transposh helps you multi-lingualize your blog with ease<br />
         <br />
 	Here are a few starting points:<br />
-	<a href="http://transposh.org">Transposh homepage</a><br />
-	<a href="http://transposh.org/faq/">Transposh FAQ</a><br />
-	<a href="http://wordpress.org/extend/plugins/transposh-translation-filter-for-wordpress/">Transposh plugin page on wordpress.org</a><br />
-	<a href="http://trac.transposh.org">Transposh development site and wiki</a><br />
-	<a href="http://wordpress.org/extend/plugins/transposh-translation-filter-for-wordpress/">Download the latest version of Transposh plugin</a>
+	<a href="https://transposh.org">Transposh homepage</a><br />
+	<a href="https://transposh.org/faq/">Transposh FAQ</a><br />
+	<a href="https://github.com/oferwald/transposh/">Transposh development site and wiki on github</a><br />
+	<a href="https://transposh.org/download/">Download the latest version of Transposh plugin</a>
 
 </body>
 </html>
